--- a/index.html
+++ b/index.html
@@ -3,151 +3,163 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Il Nostro Matrimonio</title>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <title>Andrea&Lucia</title>
+        <link href="output.css" rel="stylesheet" />
     </head>
-    <body class="bg-gray-100 text-gray-800">
-        <header class="bg-yellow-500 text-white text-center py-6">
-            <h1 class="text-4xl font-bold">Il Nostro Matrimonio</h1>
-            <p class="text-lg">Benvenuti al nostro sito di matrimonio!</p>
-        </header>
-
-        <nav class="text-center my-4">
-            <a href="#home" class="text-yellow-500 hover:underline mx-2"
-                >Home</a
-            >
-            <a href="#rsvp" class="text-yellow-500 hover:underline mx-2"
-                >RSVP</a
-            >
-            <a href="#gifts" class="text-yellow-500 hover:underline mx-2"
-                >Lista Nozze</a
-            >
-            <a href="#gallery" class="text-yellow-500 hover:underline mx-2"
-                >Galleria Fotografica</a
-            >
+    <body
+        class="bg-repeat bg-[length:30%] min-h-screen"
+        style="
+            background-image: linear-gradient(
+                    rgba(255, 255, 255, 0.7),
+                    rgba(255, 255, 255, 0.7)
+                ),
+                url('/img/sfondo.png');
+        "
+    >
+        <!-- Navigation -->
+        <nav class="sticky top-0 bg-gray-300 shadow-md z-50 w-full">
+            <div class="px-6 py-4">
+                <ul class="flex justify-center space-x-8">
+                    <li>
+                        <a
+                            href="#photos"
+                            class="hover:text-pink-500 transition-colors"
+                            >Conferma la tua presenza</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#venue"
+                            class="hover:text-pink-500 transition-colors"
+                            >Lista di nozze</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="#gifts"
+                            class="hover:text-pink-500 transition-colors"
+                            >Foto</a
+                        >
+                    </li>
+                </ul>
+            </div>
         </nav>
 
-        <section
-            id="home"
-            class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-md my-6"
-        >
-            <h2 class="text-2xl font-bold text-yellow-500 mb-4">Benvenuti!</h2>
-            <p class="text-lg">
-                Non vediamo l'ora di celebrare il nostro giorno speciale con
-                voi. Qui troverete tutte le informazioni sul nostro matrimonio.
-            </p>
-        </section>
-
-        <section
-            id="rsvp"
-            class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-md my-6"
-        >
-            <h2 class="text-2xl font-bold text-yellow-500 mb-4">
-                Conferma di Partecipazione
-            </h2>
-            <p class="text-lg">
-                Compila il modulo sottostante per confermare la tua
-                partecipazione:
-            </p>
-            <form
-                action="https://example.com/submit"
-                method="POST"
-                class="space-y-4"
-            >
-                <div>
-                    <label for="name" class="block text-lg font-semibold"
-                        >Nome:</label
-                    >
-                    <input
-                        type="text"
-                        id="name"
-                        name="name"
-                        required
-                        class="w-full border border-gray-300 rounded-lg p-2"
-                    />
-                </div>
-                <div>
-                    <label for="guests" class="block text-lg font-semibold"
-                        >Numero di Ospiti:</label
-                    >
-                    <input
-                        type="number"
-                        id="guests"
-                        name="guests"
-                        required
-                        class="w-full border border-gray-300 rounded-lg p-2"
-                    />
-                </div>
-                <div>
-                    <label for="message" class="block text-lg font-semibold"
-                        >Messaggio (opzionale):</label
-                    >
-                    <textarea
-                        id="message"
-                        name="message"
-                        rows="4"
-                        class="w-full border border-gray-300 rounded-lg p-2"
-                    ></textarea>
-                </div>
-                <button
-                    type="submit"
-                    class="w-full bg-yellow-500 text-white py-2 rounded-lg hover:bg-yellow-600"
+        <!-- Main Container -->
+        <div class="max-w-5xl mx-auto min-h-screen">
+            <!-- Intro Section -->
+            <section id="intro" class="my-10 font-bold px-4">
+                <div
+                    class="bg-slate-700 bg-opacity-15 text-center p-5 rounded-lg max-w-2xl mx-auto"
                 >
-                    Invia
-                </button>
-            </form>
-        </section>
+                    <h2 class="text-2xl text-center">Ci sposiamo!</h2>
+                    <h1 class="text-5xl mb-4 text-center">27 Marzo 2025</h1>
+                    <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
+                </div>
 
-        <section
-            id="gifts"
-            class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-md my-6"
-        >
-            <h2 class="text-2xl font-bold text-yellow-500 mb-4">Lista Nozze</h2>
-            <p class="text-lg">
-                Se desiderate contribuire al nostro futuro insieme, potete
-                scegliere dalla nostra lista nozze o inviarci un contributo:
-            </p>
-            <ul class="list-disc pl-6 space-y-2">
-                <li>
-                    <a
-                        href="https://www.amazon.it/wedding"
-                        class="text-yellow-500 hover:underline"
-                        >Lista Nozze su Amazon</a
+                <div class="my-10">
+                    <h2 class="text-4xl text-center font-serif">
+                        Benvenuti al nostro matrimonio!
+                    </h2>
+                    <p class="text-center text-gray-600 mt-4 max-w-2xl mx-auto">
+                        Siamo felici di condividere con voi questo giorno
+                        speciale. Qui troverete tutte le informazioni necessarie
+                        per partecipare al nostro matrimonio.
+                    </p>
+                </div>
+
+                <img
+                    src="/img/main2.jpg"
+                    alt="Lucia e Andrea"
+                    class="mx-auto object-cover rounded-lg shadow-md my-10 max-w-2xl w-full"
+                />
+            </section>
+
+            <!-- Ricevimento Section -->
+            <section id="ricevimento" class="py-20 px-4">
+                <div class="bg-slate-400 rounded-lg p-10 max-w-4xl mx-auto">
+                    <h2 class="text-4xl text-center font-serif mb-12">
+                        Ricevimento
+                    </h2>
+                    <div
+                        class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center"
                     >
-                </li>
-                <li>IBAN: IT60X0542811101000000123456</li>
-            </ul>
-        </section>
+                        <div class="space-y-10">
+                            <h2 class="text-2xl font-semibold mb-5">
+                                Agriturismo "Tra Lago e Cielo"
+                            </h2>
+                            <a
+                                class="text-gray-600 underline font-lg"
+                                href="https://maps.app.goo.gl/G4nR732qaEjdwxdC7"
+                            >
+                                Via della Lobbra, 1/B <br />00062 Bracciano RM,
+                                Italy
+                            </a>
+                            <p class="text-gray-600 font-bold">
+                                Il ricevimento sarà a partire dalle ore 12:00.
+                            </p>
+                        </div>
+                        <div class="h-96 rounded-lg overflow-hidden shadow-lg">
+                            <iframe
+                                scrolling="no"
+                                width="100%"
+                                height="100%"
+                                style="border: 0"
+                                allowfullscreen=""
+                                loading="lazy"
+                                src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Tra%20Lago%20e%20Cielo+(Matrimonio%20Lucia%20e%20Andrea)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                            >
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-        <section
-            id="gallery"
-            class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow-md my-6"
-        >
-            <h2 class="text-2xl font-bold text-yellow-500 mb-4">
-                Galleria Fotografica
-            </h2>
-            <p class="text-lg mb-4">Alcune delle nostre foto preferite:</p>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-                <img
-                    src="https://via.placeholder.com/300"
-                    alt="Foto 1"
-                    class="w-full rounded-lg shadow-md"
-                />
-                <img
-                    src="https://via.placeholder.com/300"
-                    alt="Foto 2"
-                    class="w-full rounded-lg shadow-md"
-                />
-                <img
-                    src="https://via.placeholder.com/300"
-                    alt="Foto 3"
-                    class="w-full rounded-lg shadow-md"
-                />
+            <!-- Gift Registry Section -->
+            <section id="gifts" class="py-20 px-4">
+                <div class="max-w-4xl mx-auto">
+                    <h2 class="text-4xl text-center font-serif mb-12">
+                        Lista di Nozze
+                    </h2>
+                    <div class="max-w-2xl mx-auto text-center">
+                        <p class="text-gray-600 mb-8">
+                            La vostra presenza al nostro matrimonio è il regalo
+                            più grande. Se desiderate farci un regalo, abbiamo
+                            creato una lista nozze:
+                        </p>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                            <a
+                                href="#"
+                                class="block p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-xl transition-shadow"
+                            >
+                                <h3 class="text-xl font-semibold mb-2">
+                                    Lista Amazon
+                                </h3>
+                                <p class="text-gray-600">
+                                    Visualizza la nostra lista dei desideri
+                                </p>
+                            </a>
+                            <a
+                                href="#"
+                                class="block p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-xl transition-shadow"
+                            >
+                                <h3 class="text-xl font-semibold mb-2">
+                                    Lista Viaggio
+                                </h3>
+                                <p class="text-gray-600">
+                                    Contribuisci al nostro viaggio di nozze
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <footer class="bg-gray-900 text-white py-8">
+            <div class="px-6 text-center">
+                <p>Non vediamo l'ora di festeggiare con voi!</p>
+                <p class="mt-2 text-gray-400">Lucia & Andrea</p>
             </div>
-        </section>
-
-        <footer class="bg-yellow-500 text-white text-center py-4 mt-6">
-            <p>&copy; 2024 Il Nostro Matrimonio. Tutti i diritti riservati.</p>
         </footer>
     </body>
 </html>
