--- a/index.html
+++ b/index.html
@@ -10,79 +10,63 @@
         class="bg-repeat bg-[length:30%] min-h-screen"
         style="
             background-image: linear-gradient(
+                    rgba(106, 209, 255, 0.2),
+                    rgba(106, 209, 255, 0.2)
+                ),
+                linear-gradient(
                     rgba(255, 255, 255, 0.7),
                     rgba(255, 255, 255, 0.7)
                 ),
                 url('/img/sfondo.png');
         "
     >
-        <!-- Navigation -->
-        <nav class="sticky top-0 bg-gray-300 shadow-md z-50 w-full">
-            <div class="px-6 py-4">
-                <ul class="flex justify-center space-x-8">
-                    <li>
-                        <a
-                            href="#photos"
-                            class="hover:text-pink-500 transition-colors"
-                            >Conferma la tua presenza</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            href="#venue"
-                            class="hover:text-pink-500 transition-colors"
-                            >Lista di nozze</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            href="#gifts"
-                            class="hover:text-pink-500 transition-colors"
-                            >Foto</a
-                        >
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
         <!-- Main Container -->
-        <div class="max-w-5xl mx-auto min-h-screen">
-            <!-- Intro Section -->
-            <section id="intro" class="my-10 font-bold px-4">
-                <div
-                    class="bg-slate-700 bg-opacity-15 text-center p-5 rounded-lg max-w-2xl mx-auto"
-                >
-                    <h2 class="text-2xl text-center">Ci sposiamo!</h2>
-                    <h1 class="text-5xl mb-4 text-center">27 Marzo 2025</h1>
-                    <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
-                </div>
-
-                <div class="my-10">
-                    <h2 class="text-4xl text-center font-serif">
+        <div class="mx-auto mt-5">
+            <div class="bg-white bg-opacity-45 text-center p-5 rounded-lg">
+                <h2 class="text-2xl text-center">Ci sposiamo!</h2>
+                <h1 class="text-5xl mb-4 text-center">27 Marzo 2025</h1>
+                <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
+            </div>
+        </div>
+        <div class="max-w-4xl min-h-screen mx-auto mt-10 mb-5">
+            <section id="intro" class="px-4">
+                <div class="">
+                    <h2
+                        class="text-4xl text-center font-serif text-gray-800 mb-6"
+                    >
                         Benvenuti al nostro matrimonio!
                     </h2>
-                    <p class="text-center text-gray-600 mt-4 max-w-2xl mx-auto">
+                    <div class="w-16 h-1 bg-blue-400 mx-auto mb-8"></div>
+                    <p
+                        class="text-center text-gray-700 text-lg leading-relaxed max-w-2xl mx-auto"
+                    >
                         Siamo felici di condividere con voi questo giorno
                         speciale. Qui troverete tutte le informazioni necessarie
                         per partecipare al nostro matrimonio.
                     </p>
                 </div>
 
-                <img
-                    src="/img/main2.jpg"
-                    alt="Lucia e Andrea"
-                    class="mx-auto object-cover rounded-lg shadow-md my-10 max-w-2xl w-full"
-                />
+                <!-- Image container with enhanced styling -->
+                <div
+                    class="relative rounded-2xl overflow-hidden shadow-2xl my-10"
+                >
+                    <img
+                        src="/img/main2.jpg"
+                        alt="Lucia e Andrea"
+                        class="w-full object-cover transform hover:scale-105 transition-transform duration-700"
+                    />
+                </div>
             </section>
-
             <!-- Ricevimento Section -->
-            <section id="ricevimento" class="py-20 px-4">
-                <div class="bg-slate-400 rounded-lg p-10 max-w-4xl mx-auto">
+            <section id="ricevimento" class="py-5 px-4">
+                <div
+                    class="bg-gray-50 rounded-lg shadow-md p-5 sm:p-10 max-w-4xl mx-auto"
+                >
                     <h2 class="text-4xl text-center font-serif mb-12">
                         Ricevimento
                     </h2>
                     <div
-                        class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center"
+                        class="grid grid-cols-1 md:grid-cols-[3fr_5fr] gap-8 items-center"
                     >
                         <div class="space-y-10">
                             <h2 class="text-2xl font-semibold mb-5">
@@ -114,43 +98,83 @@
                     </div>
                 </div>
             </section>
+            <section id="final" class="my-3 mb-10 max-w-4xl mx-auto px-4">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <!-- First Card -->
+                    <div
+                        class="bg-gray-50 rounded-lg overflow-hidden shadow-lg aspect-square flex flex-col items-center justify-center p-10"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="lucide lucide-calendar-check-2"
+                        >
+                            <path d="M8 2v4" />
+                            <path d="M16 2v4" />
+                            <path
+                                d="M21 14V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8"
+                            />
+                            <path d="M3 10h18" />
+                            <path d="m16 20 2 2 4-4" />
+                        </svg>
+                        <h3 class="text-xl font-semibold mt-5">Informazioni</h3>
+                    </div>
 
-            <!-- Gift Registry Section -->
-            <section id="gifts" class="py-20 px-4">
-                <div class="max-w-4xl mx-auto">
-                    <h2 class="text-4xl text-center font-serif mb-12">
-                        Lista di Nozze
-                    </h2>
-                    <div class="max-w-2xl mx-auto text-center">
-                        <p class="text-gray-600 mb-8">
-                            La vostra presenza al nostro matrimonio è il regalo
-                            più grande. Se desiderate farci un regalo, abbiamo
-                            creato una lista nozze:
-                        </p>
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <a
-                                href="#"
-                                class="block p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-xl transition-shadow"
-                            >
-                                <h3 class="text-xl font-semibold mb-2">
-                                    Lista Amazon
-                                </h3>
-                                <p class="text-gray-600">
-                                    Visualizza la nostra lista dei desideri
-                                </p>
-                            </a>
-                            <a
-                                href="#"
-                                class="block p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-xl transition-shadow"
-                            >
-                                <h3 class="text-xl font-semibold mb-2">
-                                    Lista Viaggio
-                                </h3>
-                                <p class="text-gray-600">
-                                    Contribuisci al nostro viaggio di nozze
-                                </p>
-                            </a>
-                        </div>
+                    <!-- Second Card -->
+                    <div
+                        class="bg-gray-50 rounded-lg overflow-hidden shadow-lg aspect-square flex flex-col items-center justify-center p-10"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="lucide lucide-gift"
+                        >
+                            <rect x="3" y="8" width="18" height="4" rx="1" />
+                            <path d="M12 8v13" />
+                            <path
+                                d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"
+                            />
+                            <path
+                                d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"
+                            />
+                        </svg>
+                        <h3 class="text-xl font-semibold mt-5">
+                            Lista di Nozze
+                        </h3>
+                    </div>
+
+                    <!-- Third Card -->
+                    <div
+                        class="bg-gray-50 rounded-lg overflow-hidden shadow-lg aspect-square flex flex-col items-center justify-center p-10"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="lucide lucide-camera"
+                        >
+                            <path
+                                d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
+                            />
+                            <circle cx="12" cy="13" r="3" />
+                        </svg>
+                        <h3 class="text-xl font-semibold mt-5">
+                            Galleria Fotografica
+                        </h3>
                     </div>
                 </div>
             </section>
