--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
             </div>
         </div>
-        <div class="max-w-4xl min-h-screen mx-auto mt-10 mb-5">
+        <div class="max-w-4xl min-h-screen mx-auto mt-5">
             <section id="intro" class="px-4">
-                <div class="">
+                <div class="my-10">
                     <h2
                         class="text-4xl text-center font-serif text-gray-800 mb-6"
                     >
@@ -38,17 +38,17 @@
                     </h2>
                     <div class="w-16 h-1 bg-blue-400 mx-auto mb-8"></div>
                     <p
-                        class="text-center text-gray-700 text-lg leading-relaxed max-w-2xl mx-auto"
+                        class="text-center text-gray-700 text-lg max-w-2xl mx-auto font-semibold"
                     >
-                        Siamo felici di condividere con voi questo giorno
-                        speciale. Qui troverete tutte le informazioni necessarie
-                        per partecipare al nostro matrimonio.
+                        In attesa del grande giorno, abbiamo creato questo sito
+                        dove puoi trovare tutte le informazioni necessarie per
+                        venire a festeggiare con noi a Bracciano.
                     </p>
                 </div>
 
                 <!-- Image container with enhanced styling -->
                 <div
-                    class="relative rounded-2xl overflow-hidden shadow-2xl my-10"
+                    class="relative rounded-2xl overflow-hidden shadow-2xl my-16"
                 >
                     <img
                         src="/img/main2.jpg"
@@ -57,12 +57,29 @@
                     />
                 </div>
             </section>
-            <!-- Ricevimento Section -->
-            <section id="ricevimento" class="py-5 px-4">
+
+            <section id="cerimonia" class="py-2 px-4">
                 <div
                     class="bg-gray-50 rounded-lg shadow-md p-5 sm:p-10 max-w-4xl mx-auto"
                 >
-                    <h2 class="text-4xl text-center font-serif mb-12">
+                    <h2 class="text-4xl text-center font-serif mb-5">
+                        Cerimonia
+                    </h2>
+                    <p class="text-gray-600">
+                        A causa dello spazio limitato, la cerimonia sarà
+                        riservata esclusivamente ai nostri genitori e testimoni.
+                        Tuttavia, saremo davvero felicissimi di condividere con
+                        voi il resto della giornata durante il ricevimento!
+                    </p>
+                </div>
+            </section>
+
+            <!-- Ricevimento Section -->
+            <section id="ricevimento" class="py-2 px-4">
+                <div
+                    class="bg-gray-50 rounded-lg shadow-md p-5 sm:p-10 max-w-4xl mx-auto"
+                >
+                    <h2 class="text-4xl text-center font-serif mb-5">
                         Ricevimento
                     </h2>
                     <div
@@ -82,6 +99,9 @@
                             <p class="text-gray-600 font-bold">
                                 Il ricevimento sarà a partire dalle ore 12:00.
                             </p>
+                            <p class="text-gray-600 font-bold">
+                                Confermaci la tua presenza cliccando sotto!
+                            </p>
                         </div>
                         <div class="h-96 rounded-lg overflow-hidden shadow-lg">
                             <iframe
@@ -98,84 +118,107 @@
                     </div>
                 </div>
             </section>
+
             <section id="final" class="my-3 mb-10 max-w-4xl mx-auto px-4">
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-8">
                     <!-- First Card -->
-                    <div
-                        class="bg-gray-50 rounded-lg overflow-hidden shadow-lg aspect-square flex flex-col items-center justify-center p-10"
+                    <a
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 transition-transform duration-700"
+                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
+                        target="_blank"
                     >
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            stroke="currentColor"
-                            stroke-width="1"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            class="lucide lucide-calendar-check-2"
+                        <div class="w-20 h-20">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="1"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-calendar-check-2"
+                            >
+                                <path d="M8 2v4" />
+                                <path d="M16 2v4" />
+                                <path
+                                    d="M21 14V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8"
+                                />
+                                <path d="M3 10h18" />
+                                <path d="m16 20 2 2 4-4" />
+                            </svg>
+                        </div>
+                        <h3
+                            class="text-xl text-center font-semibold md:mt-5 hover:underline"
                         >
-                            <path d="M8 2v4" />
-                            <path d="M16 2v4" />
-                            <path
-                                d="M21 14V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8"
-                            />
-                            <path d="M3 10h18" />
-                            <path d="m16 20 2 2 4-4" />
-                        </svg>
-                        <h3 class="text-xl font-semibold mt-5">Informazioni</h3>
-                    </div>
-
-                    <!-- Second Card -->
-                    <div
-                        class="bg-gray-50 rounded-lg overflow-hidden shadow-lg aspect-square flex flex-col items-center justify-center p-10"
-                    >
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            stroke="currentColor"
-                            stroke-width="1"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            class="lucide lucide-gift"
-                        >
-                            <rect x="3" y="8" width="18" height="4" rx="1" />
-                            <path d="M12 8v13" />
-                            <path
-                                d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"
-                            />
-                            <path
-                                d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"
-                            />
-                        </svg>
-                        <h3 class="text-xl font-semibold mt-5">
-                            Lista di Nozze
+                            Partecipazione
                         </h3>
-                    </div>
-
-                    <!-- Third Card -->
-                    <div
-                        class="bg-gray-50 rounded-lg overflow-hidden shadow-lg aspect-square flex flex-col items-center justify-center p-10"
+                    </a>
+                    <a
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 transition-transform duration-700""
+                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
+                        target="_blank"
                     >
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            stroke="currentColor"
-                            stroke-width="1"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            class="lucide lucide-camera"
+                        <div class="w-20 h-20">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="1"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-gift"
+                            >
+                                <rect
+                                    x="3"
+                                    y="8"
+                                    width="18"
+                                    height="4"
+                                    rx="1"
+                                />
+                                <path d="M12 8v13" />
+                                <path
+                                    d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"
+                                />
+                                <path
+                                    d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"
+                                />
+                            </svg>
+                        </div>
+                        <h3
+                            class="text-xl text-center font-semibold md:mt-5 hover:underline"
                         >
-                            <path
-                                d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
-                            />
-                            <circle cx="12" cy="13" r="3" />
-                        </svg>
-                        <h3 class="text-xl font-semibold mt-5">
-                            Galleria Fotografica
+                            Regalo
                         </h3>
-                    </div>
+                    </a>
+                    <a
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 transition-transform duration-700"
+                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
+                        target="_blank"
+                    >
+                        <div class="w-20 h-20">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                stroke="currentColor"
+                                stroke-width="1"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="lucide lucide-camera"
+                            >
+                                <path
+                                    d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
+                                />
+                                <circle cx="12" cy="13" r="3" />
+                            </svg>
+                        </div>
+                        <h3
+                            class="text-xl text-center font-semibold md:mt-5 hover:underline"
+                        >
+                            Foto
+                        </h3>
+                    </a>
                 </div>
             </section>
         </div>
