--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-3 md:gap-8">
                     <!-- First Card -->
                     <a
-                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 transition-transform duration-700"
-                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
-                        target="_blank"
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 focus:scale-100 active:scale-100 transition-transform duration-700"
+                        href="partecipazione.html"
                     >
                         <div class="w-20 h-20">
                             <svg
@@ -154,9 +153,8 @@
                         </h3>
                     </a>
                     <a
-                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 transition-transform duration-700""
-                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
-                        target="_blank"
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 focus:scale-100 active:scale-100 transition-transform duration-700"
+                        href="/regalo.html"
                     >
                         <div class="w-20 h-20">
                             <svg
@@ -192,9 +190,8 @@
                         </h3>
                     </a>
                     <a
-                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 transition-transform duration-700"
-                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
-                        target="_blank"
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 focus:scale-100 active:scale-100 transition-transform duration-700"
+                        href="/foto.html"
                     >
                         <div class="w-20 h-20">
                             <svg
