--- a/foto.html
+++ b/foto.html
@@ -28,28 +28,36 @@
                 <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
             </div>
         </div>
-
-        <div class="max-w-4xl mx-auto mt-5">
+        <div class="max-w-4xl mx-auto mt-5 px-4">
             <div
                 class="bg-gray-50 rounded-lg shadow-md max-w-4xl mx-auto py-5 md:p-10 px-4"
             >
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-                    <div class="space-y-10 text-center">
-                        <h2 class="text-4xl font-serif mb-5">
-                            Conferma la tua partecipazione
-                        </h2>
+                    <div
+                        class="space-y-10 text-center items-center flex flex-col"
+                    >
+                        <h2 class="text-4xl font-serif mb-5">Foto</h2>
+
+                        <p class="text-gray-600 font-bold max-w-[85%]">
+                            Abbiamo pensato ad un modo divertente per passare la
+                            giornata insieme.
+                        </p>
                         <p class="text-gray-600 font-bold">
-                            Per confermare la vostra presenza alle nozze vi
-                            basterà scrivere il vostro nome e indicare se
-                            verrete o no al matrimonio.
+                            Diventate i nostri fotografi!
+                        </p>
+                        <p class="text-gray-600 font-bold">
+                            Condividete al seguente link tutte le foto scattate
+                            al matrimonio e guardate quelle scattate dagli altri
+                            invitati!
+                        </p>
+                        <p class="text-gray-600 font-bold">
+                            ....Work in progress....
                         </p>
                     </div>
-                    <a
-                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 focus:scale-100 active:scale-100 transition-transform duration-700"
-                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
-                        target="_blank"
+                    <div
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square flex flex-col items-center justify-center p-10"
                     >
-                        <div class="w-20 h-20">
+                        <div class="w-20 h-20 md:w-40 md:h-40">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 24 24"
@@ -58,23 +66,15 @@
                                 stroke-width="1"
                                 stroke-linecap="round"
                                 stroke-linejoin="round"
-                                class="lucide lucide-calendar-check-2"
+                                class="lucide lucide-camera"
                             >
-                                <path d="M8 2v4" />
-                                <path d="M16 2v4" />
                                 <path
-                                    d="M21 14V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8"
+                                    d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                                 />
-                                <path d="M3 10h18" />
-                                <path d="m16 20 2 2 4-4" />
+                                <circle cx="12" cy="13" r="3" />
                             </svg>
                         </div>
-                        <h3
-                            class="text-xl text-center font-semibold md:mt-5 hover:underline"
-                        >
-                            Clicca qui per aprire il modulo di conferma!
-                        </h3>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
