--- a/partecipazione.html
+++ b/partecipazione.html
@@ -28,7 +28,7 @@
                 <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
             </div>
         </div>
-        <div class="max-w-4xl mx-auto mt-5">
+        <div class="max-w-4xl mx-auto mt-5 px-4">
             <div
                 class="bg-gray-50 rounded-lg shadow-md max-w-4xl mx-auto py-5 md:p-10 px-4"
             >
@@ -48,7 +48,7 @@
                         href="https://forms.gle/uD3jUiv33WCSz8xv8"
                         target="_blank"
                     >
-                        <div class="w-20 h-20">
+                        <div class="w-20 h-20 md:w-40 md:h-40">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 24 24"
