--- a/regalo.html
+++ b/regalo.html
@@ -28,27 +28,35 @@
                 <p class="text-xl mt-4 text-center">Lucia & Andrea</p>
             </div>
         </div>
-        <div class="max-w-4xl mx-auto mt-5">
+        <div class="max-w-4xl mx-auto mt-5 px-4">
             <div
                 class="bg-gray-50 rounded-lg shadow-md max-w-4xl mx-auto py-5 md:p-10 px-4"
             >
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-                    <div class="space-y-10 text-center">
-                        <h2 class="text-4xl font-serif mb-5">
-                            Conferma la tua partecipazione
-                        </h2>
-                        <p class="text-gray-600 font-bold">
-                            Per confermare la vostra presenza alle nozze vi
-                            basterà scrivere il vostro nome e indicare se
-                            verrete o no al matrimonio.
-                        </p>
-                    </div>
-                    <a
-                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 focus:scale-100 active:scale-100 transition-transform duration-700"
-                        href="https://forms.gle/uD3jUiv33WCSz8xv8"
-                        target="_blank"
+                    <div
+                        class="space-y-10 text-center items-center flex flex-col"
                     >
-                        <div class="w-20 h-20">
+                        <h2 class="text-4xl font-serif mb-5">Regalo</h2>
+
+                        <p class="text-gray-600 font-bold max-w-[85%]">
+                            Ciò che conta davvero è festeggiare la nostra unione
+                            insieme alle persone che amiamo. Arredare casa e
+                            viaggiare sono i nostri progetti del momento, se
+                            volete farci un regalo, un contributo sarà davvero
+                            apprezzato!
+                        </p>
+                        <p class="text-gray-600 font-bold">
+                            Intestazione: Lucia Montanari e Andrea Farullo
+                        </p>
+                        <p class="text-gray-600 font-bold">
+                            IBAN: IT18I0306234210000002874831
+                        </p>
+                        <h2 class="text-2xl font-serif mb-5">GRAZIE!</h2>
+                    </div>
+                    <div
+                        class="bg-gray-50 rounded-lg shadow-lg md:aspect-square flex flex-col items-center justify-center p-10"
+                    >
+                        <div class="w-20 h-20 md:w-40 md:h-40">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 24 24"
@@ -57,23 +65,25 @@
                                 stroke-width="1"
                                 stroke-linecap="round"
                                 stroke-linejoin="round"
-                                class="lucide lucide-calendar-check-2"
+                                class="lucide lucide-gift"
                             >
-                                <path d="M8 2v4" />
-                                <path d="M16 2v4" />
-                                <path
-                                    d="M21 14V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8"
+                                <rect
+                                    x="3"
+                                    y="8"
+                                    width="18"
+                                    height="4"
+                                    rx="1"
                                 />
-                                <path d="M3 10h18" />
-                                <path d="m16 20 2 2 4-4" />
+                                <path d="M12 8v13" />
+                                <path
+                                    d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"
+                                />
+                                <path
+                                    d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"
+                                />
                             </svg>
                         </div>
-                        <h3
-                            class="text-xl text-center font-semibold md:mt-5 hover:underline"
-                        >
-                            Clicca qui per aprire il modulo di conferma!
-                        </h3>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
