--- a/partecipazione.html
+++ b/partecipazione.html
@@ -42,6 +42,9 @@
                             basterà scrivere il vostro nome e indicare se
                             verrete o no al matrimonio.
                         </p>
+                        <p class="text-gray-600 font-bold">
+                            Cortesemente se riuscite a darci notizie entro il 27 febbraio 2025 per permetterci di organizzare al meglio.
+                        </p>
                     </div>
                     <a
                         class="bg-gray-50 rounded-lg shadow-lg md:aspect-square grid grid-cols-2 md:flex md:flex-col items-center justify-center p-10 hover:transform hover:scale-105 focus:scale-100 active:scale-100 transition-transform duration-700"
